# marigold-api

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudmigrate.yaml  deploy.py  marigold_db.sql  pyproject.toml  seed.json  setup.txt  temp
backend/: exceptions.py  filters.py  middlewares.py  routers.py  settings-temp.py  settings.py  urls.py
backend/branches/: admin.py  choices.py  globals.py  models.py  querysets.py  urls.py  views.py
backend/branches/migrations/: 0001_initial.py  0002_rename_branchproducts_branchproduct.py
backend/branches/serializers/: base.py  query.py  request.py  response.py
backend/deliveries/: admin.py  choices.py  globals.py  models.py  querysets.py  urls.py  views.py
backend/deliveries/migrations/: 0001_initial.py  0002_rename_delivered_out_by_delivery_delivered_by.py  0003_deliveryproduct_price.py  0004_delivery_datetime_completed.py  0005_delivery_payment_status.py  0006_alter_delivery_payment_status.py  (+1 more)
backend/generic/: fields.py  pagination.py  response.py  swagger.py  views.py
backend/notifications/: admin.py  models.py  querysets.py  urls.py  views.py
backend/preorders/: admin.py  choices.py  globals.py  models.py  querysets.py  urls.py  views.py
backend/products/: choices.py  globals.py  models.py  querysets.py  urls.py  views.py
backend/reports/: urls.py  views.py
backend/templates/: redoc.html
backend/transactions/: admin.py  models.py  urls.py  views.py
backend/users/: choices.py  globals.py  managers.py  models.py  querysets.py  urls.py  views.py
backend/web_requests/: admin.py  models.py
(+54 files in other folders)
